uppdaterat dependencies, en första variant av att spara undan valda kategorier